// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-number-input.vue Demo-双向绑定 1`] = `
<div buttondisplay="tail" class="root" prefix="true">
  <span>b</span>
  <span style="display: none;"></span>
  <span name="true">
    <span></span>
  </span>
  <input buttondisplay="tail" type="text">
  <span class="button" role="up" tabindex="0"></span>
  <span class="button" role="down" tabindex="0"></span>
</div>
`;

exports[`u-number-input.vue Demo-只读和禁用 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div buttondisplay="tail" class="root" prefix="true" readonly="readonly">
      <span>b</span>
      <span style="display: none;"></span>
      <span name="true">
        <span></span>
      </span>
      <input buttondisplay="tail" readonly="readonly" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
    <div buttondisplay="tail" class="root" disabled="disabled" prefix="true">
      <span>b</span>
      <span style="display: none;"></span>
      <span name="true">
        <span></span>
      </span>
      <input buttondisplay="tail" disabled="disabled" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
    <div buttondisplay="bothEnds" class="root" prefix="true" readonly="readonly">
      <span>b</span>
      <span style="display: none;"></span>
      <span name="true">
        <span></span>
      </span>
      <input buttondisplay="bothEnds" readonly="readonly" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
    <div buttondisplay="bothEnds" class="root" disabled="disabled" prefix="true">
      <span>b</span>
      <span style="display: none;"></span>
      <span name="true">
        <span></span>
      </span>
      <input buttondisplay="bothEnds" disabled="disabled" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
  </div>
</div>
`;

exports[`u-number-input.vue Demo-基本用法 1`] = `
<div>
  <div buttondisplay="tail" class="root" prefix="true">
    <span>b</span>
    <span style="display: none;"></span>
    <span name="true">
      <span></span>
    </span>
    <input buttondisplay="tail" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
  </div>
</div>
`;

exports[`u-number-input.vue Demo-基本用法 2`] = `
<div class="root" direction="horizontal" type vusion-slot-name="default">
  <div buttondisplay="tail" class="root" prefix="true">
    <span>b</span>
    <span style="display: none;"></span>
    <span name="true">
      <span></span>
    </span>
    <input buttondisplay="tail" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
  </div>
  <div buttondisplay="tail" class="root" prefix="true">
    <span>b</span>
    <span style="display: none;"></span>
    <span name="true">
      <span></span>
    </span>
    <input buttondisplay="tail" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
  </div>
  <div buttondisplay="tail" class="root" prefix="true">
    <span>b</span>
    <span style="display: none;"></span>
    <span name="true">
      <span></span>
    </span>
    <input buttondisplay="tail" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
  </div>
  <div advanced-formatter="[object Object]" buttondisplay="tail" class="root" prefix="true">
    <span>b</span>
    <span style="display: none;"></span>
    <span name="true">
      <span>$</span>
    </span>
    <input advanced-formatter="[object Object]" buttondisplay="tail" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
  </div>
</div>
`;

exports[`u-number-input.vue Demo-基本用法 3`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div buttondisplay="tail" class="root" prefix="true">
      <span>b</span>
      <span style="display: none;"></span>
      <span name="true">
        <span></span>
      </span>
      <input buttondisplay="tail" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
    <div buttondisplay="tail" class="root" prefix="true">
      <span>b</span>
      <span style="display: none;"></span>
      <span name="true">
        <span></span>
      </span>
      <input buttondisplay="tail" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
  </div>
</div>
`;

exports[`u-number-input.vue Demo-按钮为两端分布 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div buttondisplay="bothEnds" class="root" prefix="true">
      <span>b</span>
      <span style="display: none;"></span>
      <span name="true">
        <span></span>
      </span>
      <input buttondisplay="bothEnds" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
  </div>
</div>
`;

exports[`u-number-input.vue Demo-按钮样式 1`] = `
<div>
  <div buttondisplay="bothEnds" class="root" prefix="true">
    <span>b</span>
    <span style="display: none;"></span>
    <span name="true">
      <span></span>
    </span>
    <input buttondisplay="bothEnds" type="text">
    <span class="button" role="up" tabindex="0"></span>
    <span class="button" role="down" tabindex="0"></span>
  </div>
</div>
`;

exports[`u-number-input.vue Demo-最大值和最小值 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div buttondisplay="tail" class="root" prefix="true">
      <span>b</span>
      <span style="display: none;"></span>
      <span name="true">
        <span></span>
      </span>
      <input buttondisplay="tail" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" disabled="disabled" role="down" tabindex="0"></span>
    </div>
    <div buttondisplay="tail" class="root" prefix="true">
      <span>b</span>
      <span style="display: none;"></span>
      <span name="true">
        <span></span>
      </span>
      <input buttondisplay="tail" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
  </div>
</div>
`;

exports[`u-number-input.vue Demo-格式化 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div buttondisplay="tail" class="root" prefix="true">
      <span>b</span>
      <span style="display: none;"></span>
      <span name="true">
        <span></span>
      </span>
      <input buttondisplay="tail" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
    <div buttondisplay="tail" class="root" prefix="true">
      <span>b</span>
      <span style="display: none;"></span>
      <span name="true">
        <span></span>
      </span>
      <input buttondisplay="tail" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
    <div buttondisplay="tail" class="root" prefix="true">
      <span>b</span>
      <span style="display: none;"></span>
      <span name="true">
        <span></span>
      </span>
      <input buttondisplay="tail" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
  </div>
</div>
`;

exports[`u-number-input.vue Demo-精度与间隔 1`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div buttondisplay="tail" class="root" prefix="true">
      <span>b</span>
      <span style="display: none;"></span>
      <span name="true">
        <span></span>
      </span>
      <input buttondisplay="tail" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
    <div buttondisplay="tail" class="root" prefix="true">
      <span>b</span>
      <span style="display: none;"></span>
      <span name="true">
        <span></span>
      </span>
      <input buttondisplay="tail" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
    <div buttondisplay="tail" class="root" prefix="true">
      <span>b</span>
      <span style="display: none;"></span>
      <span name="true">
        <span></span>
      </span>
      <input buttondisplay="tail" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
  </div>
</div>
`;

exports[`u-number-input.vue Demo-精度与间隔 2`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div buttondisplay="tail" class="root" prefix="true">
      <span>b</span>
      <span style="display: none;"></span>
      <span name="true">
        <span></span>
      </span>
      <input buttondisplay="tail" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
  </div>
</div>
`;

exports[`u-number-input.vue Demo-精度与间隔 3`] = `
<div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div buttondisplay="tail" class="root" prefix="true">
      <span>b</span>
      <span style="display: none;"></span>
      <span name="true">
        <span></span>
      </span>
      <input buttondisplay="tail" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
    <div buttondisplay="tail" class="root" prefix="true">
      <span>b</span>
      <span style="display: none;"></span>
      <span name="true">
        <span></span>
      </span>
      <input buttondisplay="tail" type="text">
      <span class="button" role="up" tabindex="0"></span>
      <span class="button" role="down" tabindex="0"></span>
    </div>
  </div>
</div>
`;

exports[`u-number-input.vue Demo-键盘事件 1`] = `
<div buttondisplay="tail" class="root" prefix="true">
  <span>b</span>
  <span style="display: none;"></span>
  <span name="true">
    <span></span>
  </span>
  <input buttondisplay="tail" type="text">
  <span class="button" role="up" tabindex="0"></span>
  <span class="button" role="down" tabindex="0"></span>
</div>
`;
